# ai-explore

./: main.py  pyproject.toml  requirements.txt
app/core/: inference.py  inference_gguf.py  middleware.py  security.py
